# hermes-analyzer

./: TERMUX_INSTALL.md  gradlew  settings.gradle.kts  termux-build.sh
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/hermes/analyzer/: AIAgentChatActivity.kt  AgentStatusActivity.kt  AnalysisResultsActivity.kt  AuditLogActivity.kt  AuditLogManager.kt  BrowserActivity.kt  ChatActivity.kt  ChatGPTActivity.kt  DashboardActivity.kt  EnhancedBrowserActivity.kt  FileBrowserActivity.kt  FileManagerActivity.kt  FilePickerActivity.kt  GitHubIntegrationActivity.kt  HermesApplication.kt  IDAMobileActivity.kt  MainActivity.kt  MemoryManagerActivity.kt  PluginManagerActivity.kt  ProgressTracker.kt  SandboxManagerActivity.kt  SettingsActivity.kt  TerminalActivity.kt
app/src/main/java/com/hermes/analyzer/ai/: AIChatEngine.kt  AIMultiEngine.kt  AdvancedAIEngine.kt  AdvancedCognitiveEngine.kt  AgentFactory.kt  AgentPlanner.kt  AutonomousEngine.kt  ClaudeStyleAgent.kt  ContextQueryEngine.kt  DeobfuscationEngine.kt  HexAnalyzer.kt  HuggingFaceModelManager.kt  LocalLLMEngine.kt  ModelDownloadManager.kt  (+11 more)
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_ai_agent_chat.xml  activity_browser.xml  activity_chat.xml  activity_main.xml  activity_results.xml  activity_settings.xml  activity_terminal.xml  item_chat_ai.xml  item_chat_system.xml  item_chat_user.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+37 files in other folders)
